@@ -3407,8 +3407,10 @@ INLINE long   Fl_center(ulong u, ulong p, ulong ps2);
 INLINE ulong  Fl_div(ulong a, ulong b, ulong p);
 INLINE ulong  Fl_double(ulong a, ulong p);
 INLINE ulong  Fl_mul(ulong a, ulong b, ulong p);
+INLINE ulong  Fl_mul_pre(ulong a, ulong b, ulong p, ulong pi);
 INLINE ulong  Fl_neg(ulong x, ulong p);
 INLINE ulong  Fl_sqr(ulong a, ulong p);
+INLINE ulong  Fl_sqr_pre(ulong a, ulong p, ulong pi);
 INLINE ulong  Fl_sub(ulong a, ulong b, ulong p);
 INLINE ulong  Fl_triple(ulong a, ulong p);
 INLINE GEN    absi(GEN x);
@@ -3500,6 +3502,7 @@ INLINE long   expi(GEN x);
 INLINE long   expu(ulong x);
 INLINE void   fixlg(GEN z, long ly);
 INLINE GEN    fractor(GEN x, long prec);
+INLINE ulong  get_Fl_red(ulong p);
 INLINE GEN    icopy(GEN x);
 INLINE GEN    icopyspec(GEN x, long nx);
 INLINE GEN    icopy_avma(GEN x, pari_sp av);
@@ -3582,6 +3585,7 @@ INLINE GEN    remii(GEN a, GEN b);
 INLINE void   remiiz(GEN x, GEN y, GEN z);
 INLINE GEN    remis(GEN x, long y);
 INLINE void   remisz(GEN y, long s, GEN z);
+INLINE ulong  remll_pre(ulong u1, ulong u0, ulong p, ulong pi);
 INLINE GEN    remsi(long x, GEN y);
 INLINE void   remsiz(long s, GEN y, GEN z);
 INLINE GEN    remss(long x, long y);
